--- a/ansible/roles/letsencrypt/defaults/main.yml
+++ b/ansible/roles/letsencrypt/defaults/main.yml
@@ -14,6 +14,7 @@ letsencrypt_certs:
 
 # --- ArvanCloud API Settings (OVERRIDE IN VAULT) ---
 arvancloud_api_key: "YOUR_API_KEY_HERE"
+arvancloud_base_domain: tirro.ir
 
 # --- acme-dns Service Settings ---
 # These variables control the local acme-dns service.
@@ -21,6 +22,8 @@ acme_dns_config_path: "/opt/acme-dns/config.cfg"
 acme_dns_storage_path: "/var/lib/acme-dns"
 acme_dns_auth_info_path: "{{ acme_dns_storage_path }}/acme-dns-auth.json"
 acme_dns_api_url: "http://127.0.0.1:8080" # The API endpoint for the local acme-dns container
+acme_dns_listen_address: "127.0.0.1"
+acme_dns_api_port: 8080
 
 # acme-dns-client binary settings
 acme_client_install_path: "/usr/local/bin/acme-dns-client"
