[ REMOVE ] everything includes acme-dns server and arvancloud manual dns mutation to use acme.sh with arvancloud apikey

--- a/ansible/roles/letsencrypt/defaults/main.yml
+++ b/ansible/roles/letsencrypt/defaults/main.yml
@@ -1,11 +1,11 @@
-# Define the certificates you want to obtain.
-# You can add more domains to this list.
 # roles/letsencrypt/defaults/main.yml
 ---
 # --- Challenge Configuration ---
 # Set the challenge type to 'dns' or 'http'.
 letsencrypt_challenge_type: "dns"
 
+# Define the certificates you want to obtain.
+# You can add more domains to this list.
 # List of certificates to obtain.
 letsencrypt_certs:
   # - domain: "registry.tirro.ir"
@@ -14,17 +14,7 @@ letsencrypt_certs:
 
 # --- ArvanCloud API Settings (OVERRIDE IN VAULT) ---
 arvancloud_api_key: "YOUR_API_KEY_HERE"
-arvancloud_base_domain: tirro.ir
-
-# --- acme-dns Service Settings ---
-# These variables control the local acme-dns service.
-acme_dns_config_path: "/opt/acme-dns/config.cfg"
-acme_dns_storage_path: "/var/lib/acme-dns"
-acme_dns_auth_info_path: "{{ acme_dns_storage_path }}/acme-dns-auth.json"
-acme_dns_api_url: "http://127.0.0.1:8080" # The API endpoint for the local acme-dns container
-acme_dns_listen_address: "127.0.0.1"
-acme_dns_api_port: 8080
 
 # acme-dns-client binary settings
-acme_client_install_path: "/usr/local/bin/acme-dns-client"
+acme_client_install_path: "/usr/local/bin/acme.sh"
 
