--- a/ansible/roles/registry/defaults/main.yml
+++ b/ansible/roles/registry/defaults/main.yml
@@ -8,6 +8,7 @@ registry_storage_path: /var/registry/data
 registry_config_base_path: /opt/registry
 registry_config_file: "{{ registry_config_base_path }}/config.yml"
 registry_tls_path: "{{ registry_config_base_path }}/tls"
+registry_tls_copy_from_path: "{{ acme_sh_copy_certs_to_path }}"
 registry_auth_path: "{{ registry_config_base_path }}/auth"
 registry_auth_file: "{{ registry_auth_path }}/htpasswd"
 
@@ -22,5 +23,4 @@ registry_password: "CHANGEME"
 # Source paths for TLS files on your Ansible control node
 # You should point these to where your certs are stored locally.
 # NOTE: These variables are required if registry.domain value doesn't exist on {{ letsencrypt_certs }} list.
-# registry_tls_cert_src: "/path/on/ansible/controller/to/fullchain.pem"
-# registry_tls_key_src: "/path/on/ansible/controller/to/privkey.pem"
+# registry_tls_copy_from_local_path: "/path/on/ansible/controller/to/certs"
