--- a/ansible/roles/common/defaults/main.yml
+++ b/ansible/roles/common/defaults/main.yml
@@ -6,4 +6,10 @@ xray_config_git_template: "https://github.com/saniyar-dev/xray-core_leastPing-le
 xray_config_path: "/usr/local/etc/xray"
 xray_config_update: true
 
+xray_log_path: "/var/log/xray"
+
 xray_exec_path: "/usr/local/bin/xray"
+xray_install_url: "https://github.com/XTLS/Xray-install/raw/main/install-release.sh"
+xray_install_script_path: "/tmp/install-xray"
+
+xray_config_local_dir_src: "path/to/config/files"
