--- a/ansible/roles/common/tasks/xray.yml
+++ b/ansible/roles/common/tasks/xray.yml
@@ -49,6 +49,21 @@
     - not xray_uninstall
     - not is_xray_installed.stat.exists
 
+- name: Add xray-service.conf to xray.service.d
+  ansible.builtin.template:
+    src: xray-service.conf.j2
+    dest: /etc/systemd/system/xray.service.d/xray-service.conf
+    owner: root
+    group: root
+    mode: '644'
+  become: yes
+  notify: 
+    - Systemd daemon-reload
+    - Restart xray service
+  when: 
+    - not xray_uninstall
+    - not is_xray_installed.stat.exists
+
 - name: Copy configs from local host
   ansible.builtin.copy:
     src: "{{ xray_config_local_dir_src }}/"
@@ -56,7 +71,7 @@
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
     mode: '0600'
-  # notify: Restart xray service
+  notify: Restart xray service
   when: 
     - not xray_uninstall 
     - xray_config_update
