--- a/ansible/roles/registry/defaults/main.yml
+++ b/ansible/roles/registry/defaults/main.yml
@@ -8,7 +8,8 @@ registry_storage_path: /var/registry/data
 registry_config_base_path: /opt/registry
 registry_config_file: "{{ registry_config_base_path }}/config.yml"
 registry_tls_path: "{{ registry_config_base_path }}/tls"
-registry_tls_copy_from_path: "{{ acme_sh_copy_certs_to_path }}"
+registry_tls_src: "{{ acme_sh_copy_certs_to_path }}/{{ registry_domain }}"
+registry_tls_remote_src: true
 registry_auth_path: "{{ registry_config_base_path }}/auth"
 registry_auth_file: "{{ registry_auth_path }}/htpasswd"
 
@@ -23,4 +24,5 @@ registry_password: "CHANGEME"
 # Source paths for TLS files on your Ansible control node
 # You should point these to where your certs are stored locally.
 # NOTE: These variables are required if registry.domain value doesn't exist on {{ letsencrypt_certs }} list.
-# registry_tls_copy_from_local_path: "/path/on/ansible/controller/to/certs"
+# registry_tls_src: "/path/on/ansible/controller/to/certs"
+# registry_tls_remote_src: no
