--- a/ansible/roles/docker/tasks/setup-Debian.yml
+++ b/ansible/roles/docker/tasks/setup-Debian.yml
@@ -46,7 +46,17 @@
     checksum: "{{ docker_apt_gpg_key_checksum | default(omit) }}"
   register: add_repository_key
   ignore_errors: "{{ docker_apt_ignore_key_error }}"
+  environment: ["{{ proxy }}"]
   when: docker_add_repo | bool
+
+- name: Download Docker's GPG key using curl
+  ansible.builtin.shell:
+    cmd: "curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc"
+  register: add_repository_key
+  environment: ["{{ proxy }}"]
+  when: docker_add_repo | bool
+  args:
+    creates: /etc/apt/keyrings/docker.asc
 
 - name: Ensure curl is present (on older systems without SNI).
   package: name=curl state=present
@@ -55,6 +65,7 @@
 - name: Add Docker apt key (alternative for older systems without SNI).
   shell: >
     curl -sSL {{ docker_apt_gpg_key }} | apt-key add -
+  environment: ["{{ proxy }}"]
   when: add_repository_key is failed and docker_add_repo | bool
 
 - name: Add Docker repository.
@@ -63,4 +74,5 @@
     state: present
     filename: "{{ docker_apt_filename }}"
     update_cache: true
+  environment: ["{{ proxy }}"]
   when: docker_add_repo | bool
