[ FIX ] start container without tls, htpasswd auth encryption, users in vault

--- a/ansible/roles/registry/tasks/main.yml
+++ b/ansible/roles/registry/tasks/main.yml
@@ -56,6 +56,7 @@
     password: "{{ registry_password }}" # NOTE: Store this password securely in Ansible Vault
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
+    crypt_scheme: bcrypt
     mode: '0644'
   # args:
   #   creates: "{{ registry_auth_file }}"
