--- a/ansible/roles/registry/defaults/main.yml
+++ b/ansible/roles/registry/defaults/main.yml
@@ -14,8 +14,7 @@ registry_auth_path: "{{ registry_config_base_path }}/auth"
 registry_auth_file: "{{ registry_auth_path }}/htpasswd"
 
 # Registry settings
-registry_domain: registry.tirro.ir
-registry_outbound_proxy: "http://your-outbound-proxy.com:8080"
+registry_domain: registry.home-lab.ir
 
 # User credentials (override these securely with Ansible Vault)
 registry_user: "ci-user"
@@ -26,3 +25,29 @@ registry_password: "CHANGEME"
 # NOTE: These variables are required if registry.domain value doesn't exist on {{ letsencrypt_certs }} list.
 # registry_tls_src: "/path/on/ansible/controller/to/certs"
 # registry_tls_remote_src: no
+#
+#
+# --- Mirror registry vars ---
+# Host paths
+mirror_registry_storage_path: /var/registry/mirror/data
+mirror_registry_config_base_path: /opt/registry/mirror
+mirror_registry_config_file: "{{ mirror_registry_config_base_path }}/config.yml"
+mirror_registry_tls_path: "{{ mirror_registry_config_base_path }}/tls"
+mirror_registry_tls_src: "{{ acme_sh_copy_certs_to_path }}/{{ mirror_registry_domain }}"
+mirror_registry_tls_remote_src: true
+mirror_registry_auth_path: "{{ mirror_registry_config_base_path }}/auth"
+mirror_registry_auth_file: "{{ mirror_registry_auth_path }}/htpasswd"
+
+# Registry settings
+mirror_registry_domain: hub.home-lab.ir
+mirror_registry_outbound_proxy: "http://your-outbound-proxy.com:8080"
+
+# User credentials (override these securely with Ansible Vault)
+mirror_registry_user: "ci-user"
+mirror_registry_password: "CHANGEME"
+
+# Source paths for TLS files on your Ansible control node
+# You should point these to where your certs are stored locally.
+# NOTE: These variables are required if registry.domain value doesn't exist on {{ letsencrypt_certs }} list.
+# mirror_registry_tls_src: "/path/on/ansible/controller/to/certs"
+# mirror_registry_tls_remote_src: no
