--- a/ansible/roles/registry/handlers/main.yml
+++ b/ansible/roles/registry/handlers/main.yml
@@ -5,3 +5,8 @@
   community.docker.docker_container:
     name: registry
     restart: yes
+
+- name: Restart mirror container
+  community.docker.docker_container:
+    name: mirror
+    restart: yes
