--- a/ansible/group_vars/all/all.yml
+++ b/ansible/group_vars/all/all.yml
@@ -4,3 +4,5 @@ acme_sh_copy_certs_to_path: "/etc/ssl/acme.sh"
 acme_sh_domains: 
   - domains: ["registry.tirro.ir"]
     install_cert_reloadcmd: "docker restart registry"
+  - domains: ["hub.tirro.ir"]
+    install_cert_reloadcmd: "docker restart mirror"
