--- a/ansible/roles/registry/tasks/mirror.yml
+++ b/ansible/roles/registry/tasks/mirror.yml
@@ -25,7 +25,7 @@
     - "{{ mirror_registry_storage_path }}"
     - "{{ mirror_registry_config_base_path }}"
     - "{{ mirror_registry_tls_path }}"
-    - "{{ mirror_registry_auth_path }}"
+    # - "{{ mirror_registry_auth_path }}"
   become: yes
 
 - name: Remove available configuration and files
@@ -34,7 +34,7 @@
     state: "absent"
   loop:
     - "{{ mirror_registry_config_file }}"
-    - "{{ mirror_registry_auth_file }}"
+    # - "{{ mirror_registry_auth_file }}"
     - "{{ mirror_registry_tls_path }}/fullchain.pem"
     - "{{ mirror_registry_tls_path }}/privkey.pem"
 
@@ -49,17 +49,17 @@
   # args:
   #   creates: "{{ mirror_registry_config_file }}"
 
-- name: Create htpasswd file and add registry user
-  community.general.htpasswd:
-    path: "{{ mirror_registry_auth_file }}"
-    name: "{{ mirror_registry_user }}"
-    password: "{{ mirror_registry_password }}" # NOTE: Store this password securely in Ansible Vault
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
-    crypt_scheme: bcrypt
-    mode: '0644'
-  # args:
-  #   creates: "{{ mirror_registry_auth_file }}"
+# - name: Create htpasswd file and add registry user
+#   community.general.htpasswd:
+#     path: "{{ mirror_registry_auth_file }}"
+#     name: "{{ mirror_registry_user }}"
+#     password: "{{ mirror_registry_password }}" # NOTE: Store this password securely in Ansible Vault
+#     owner: "{{ ansible_user }}"
+#     group: "{{ ansible_user }}"
+#     crypt_scheme: bcrypt
+#     mode: '0644'
+#   args:
+#     creates: "{{ mirror_registry_auth_file }}"
 
 - name: Copy TLS certificate and key
   ansible.builtin.copy:
@@ -122,6 +122,6 @@
       - "{{ mirror_registry_storage_path }}:/var/lib/registry"
       - "{{ mirror_registry_config_file }}:/etc/distribution/config.yml:ro"
       - "{{ mirror_registry_tls_path }}:/etc/docker/registry/tls:ro"
-      - "{{ mirror_registry_auth_path }}:/etc/docker/registry/auth:ro"
+      # - "{{ mirror_registry_auth_path }}:/etc/docker/registry/auth:ro"
   # environment: ["{{ proxy }}"]
 
