[ FIX ] inventory host groups and variables

--- a/common.yml
+++ b/common.yml
@@ -1,6 +1,6 @@
 # playbook.yml
 ---
-- hosts: home_lab # Target host from your inventory
+- hosts: all # Target host from your inventory
   become: yes
   roles:
     - common
