[ FIX ] install_proxy var for xray to copy or not copy configs from localhost

--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -2,9 +2,10 @@ xray_uninstall: false
 
 xray_dependencies: ["cron", "git", "wget"]
 
-xray_config_git_template: "https://github.com/saniyar-dev/xray-core_leastPing-leastLoad_template.git"
+xray_config_git_template: "https://github.com/saniyar-dev/subxray.git"
 xray_config_path: "/usr/local/etc/xray"
 xray_config_update: true
+install_proxy: false
 
 xray_log_path: "/var/log/xray"
 
