--- a/inventory/simanban/group_vars/all/all.yml
+++ b/inventory/simanban/group_vars/all/all.yml
@@ -2,7 +2,5 @@
 # acme_sh_uninstall: true
 acme_sh_copy_certs_to_path: "/etc/ssl/acme.sh"
 acme_sh_domains: 
-  - domains: ["registry.tirro.ir"]
-    install_cert_reloadcmd: "docker restart registry"
-  - domains: ["hub.tirro.ir"]
-    install_cert_reloadcmd: "docker restart mirror"
+  - domains: ["n8n.home-lab.ir"]
+    install_cert_reloadcmd: "docker restart simanban-n8n-container"
